# TradingSignal

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: continous-integration.yml
tests/: test_server.py
tests/utils/: test_logging.py
tradingsignal/: __init__.py  __main__.py  constants.py  data_miner.py  exceptions.py  main.py  run_server.py
tradingsignal/cli/: data.py  run_server.py
tradingsignal/cli/arguments/: data.py  default_arguments.py  run_server.py
tradingsignal/exchange/: exchange.py  oanda.py
tradingsignal/listeners/: event_listeners.py  event_manager.py  logging_listener.py  slack_listeners.py
tradingsignal/models/: action_type.py
tradingsignal/resolvers/: exchange_resolver.py  listener_resolver.py  strategy_resolver.py
tradingsignal/service/: server.py
tradingsignal/strategies/: rsi_strategy.py  strategy.py  strategy_util.py
tradingsignal/utils/: io.py  ts_logging.py  ts_scheduler.py
